--- a/index.html
+++ b/index.html
@@ -15,8 +15,34 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!--Top-bar-->
+        <nav class="top-bar">
+            <div class="container">
+                <div class="row justify-content-center justify-content-sm-between align-items-center gy-2">
+                    <div class="col-auto text-center text-sm-start mb-2 mb-sm-0">
+                        <p class="text-light">
+                            <i class="bi bi-twitter text-light mx-1"></i>
+                            <span>#16, Petion-Ville, Route de Freres, Cargro</span>
+                        </p>
+                        <p class="text-light">
+                            <i class="bi bi-phone text-light mx-1"></i>
+                            <span>+509 3200-5660</span>
+                        </p>
+                    </div>
+                    <div class="col-auto text-center text-sm-start">
+                        <div class="social-links">
+                            <a href="#" class="text-light mx-1"><i class="bi bi-twitter"></i></a>
+                            <a href="#" class="text-light mx-1"><i class="bi bi-facebook"></i></a>
+                            <a href="#" class="text-light mx-1"><i class="bi bi-youtube"></i></a>
+                            <a href="#" class="text-light mx-1"><i class="bi bi-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>                
+            </div>
+        </nav>
+
         <!--working on the navbar-->
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
             <!--explanation
                 navbar=>is the class
                 navbar-expand-lg=> is to responsive breakpoint, as long as the viewport is below lg breakpoing the menu will remain toggle
@@ -34,7 +60,7 @@
                     data-bs-toggle=> just to say we need to collapse de buttom
                     data-bs-targer=> the specific data to target
                 -->
-                <buttom class="navbar-toggler" type="toggler" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <buttom class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                     <span class="navbar-toggler-icon"></span>
                 </buttom>
                 <!--now add the menu list-->
@@ -84,7 +110,7 @@
                             We focus on teaching our students the fundamentals of the latest and greatest technologies to prepare them to
                             their first dev role.
                         </p>
-                        <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Start The Enrollment</button>
+                        <button class="btn btn-primary btn-lg">Start The Enrollment</button>
                         <!--Explanation
                             btn=> name of button class
                             btn-primary=> color of this button
@@ -420,7 +446,7 @@
                                 <span class="fw-bold">Enrollment Email:</span> enroll@frontendbc.test
                             </li>
                             <li class="list-group-item">
-                                <span class="fw-bold">Studetn Email:</span> stu@frontendbc.test
+                                <span class="fw-bold">Student Email:</span> stu@frontendbc.test
                             </li>
                         </ul>
                     </div>
@@ -442,49 +468,6 @@
             </div>
         </footer>
 
-        <!-- Modal -->
-        <div class="modal fade" id="enroll" tabindex="-1" aria-labelledby="enrollLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="enrollLabel">Modal title</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p class="lead">Fill out the form and will get back to you</p>
-                        <form>
-                            <div class="mb-3">
-                               <label for="first-name" class="col-form-label">
-                                First Name:
-                               </label>
-                               <input type="text" class="form-control" id="first-name"/>
-                            </div>
-                            <div class="mb-3">
-                                <label for="last-name" class="col-form-label">
-                                 Last Name:
-                                </label>
-                                <input type="text" class="form-control" id="last-name"/>
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="col-form-label">
-                                 Email:
-                                </label>
-                                <input type="text" class="form-control" id="email"/>
-                            </div>
-                            <div class="mb-3">
-                                <label for="phone" class="col-form-label">
-                                 Phone:
-                                </label>
-                                <input type="text" class="form-control" id="phone"/>
-                            </div>
-                        </form>
-                    </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Submit</button>
-                </div>
-            </div>
-        </div>
         <!--Javascript code for map-->
         <script>
             var latitude = 18.5231068; 
