--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <!--Top-bar-->
+        <!--Top-bar
         <nav class="top-bar">
             <div class="container">
                 <div class="row justify-content-center justify-content-sm-between align-items-center gy-2">
@@ -39,7 +39,33 @@
                     </div>
                 </div>                
             </div>
-        </nav>
+        </nav> -->
+
+        <!-- Top-bar -->
+    <nav class="top-bar">
+        <div class="container">
+            <div class="row justify-content-center justify-content-sm-between align-items-center gy-2">
+                <div class="col-auto text-center text-sm-start mb-2 mb-sm-0">
+                    <p class="text-light mb-1">
+                        <i class="bi bi-twitter text-light mx-1"></i>
+                        <span>#16, Petion-Ville, Route de Freres, Cargro</span>
+                    </p>
+                    <p class="text-light mb-0">
+                        <i class="bi bi-phone text-light mx-1"></i>
+                        <span>+509 3200-5660</span>
+                    </p>
+                </div>
+                <div class="col-auto text-center text-sm-start">
+                    <div class="social-links">
+                        <a href="#" class="text-light mx-1"><i class="bi bi-twitter"></i></a>
+                        <a href="#" class="text-light mx-1"><i class="bi bi-facebook"></i></a>
+                        <a href="#" class="text-light mx-1"><i class="bi bi-youtube"></i></a>
+                        <a href="#" class="text-light mx-1"><i class="bi bi-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 
         <!--working on the navbar-->
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
